--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 <li><a class="dropdown-item" href="works/leather.html">Leather Crafting</a></li>
                 <li><a class="dropdown-item" href="works/film.html">Film Production</a></li>
                 <li><a class="dropdown-item" href="https://dodgedesign.io/">Web Development</a></li>
-                <li><a class="dropdown-item" href="works/ideas.html">Ideas</a></li>
-                <div class="dropdown-divider"></div>
-                <li><a class="dropdown-item" href="works/inspiration.html">Inspiration</a></li>
+                <!-- <li><a class="dropdown-item" href="works/ideas.html">Ideas</a></li> -->
+                <!-- <div class="dropdown-divider"></div>
+                <li><a class="dropdown-item" href="works/inspiration.html">Inspiration</a></li> -->
               </ul>
             </li>
           </ul>
@@ -81,16 +81,9 @@
             <a href="works/wood.html"><img src="images/placeholder1.jpg" alt="" ></a>
             <a href="works/leather.html"><img src="images/placeholder2.jpg" alt="" ></a>
             <a href="works/film.html"><img src="images/placeholder3.jpg" alt="" ></a>
-            <a href="works/ideas.html"><img src="images/placeholder4.jpg" alt="" ></a>
-            <a href="works/inspiration.html"><img src="images/placeholder5.jpg" alt="" ></a>
-            <a href="works/#.html"><img src="images/placeholder6.jpg" alt="" ></a>
-            <!-- <img src="images/placeholder1.jpg" alt="" >
-            <img src="images/placeholder2.jpg" alt="" >
-            <img src="images/placeholder3.jpg" alt="" >
-            <img src="images/placeholder4.jpg" alt="" >
-            <img src="images/placeholder5.jpg" alt="" >
-            <img src="images/placeholder6.jpg" alt="" >
-            <img src="images/placeholder6.jpg" alt="" > -->
+            <!-- <a href="works/ideas.html"><img src="images/placeholder4.jpg" alt="" ></a> -->
+            <!-- <a href="works/inspiration.html"><img src="images/placeholder5.jpg" alt="" ></a> -->
+            <a href="https://dodgedesign.io/" target="_blank" rel='noreferrer'><img src="images/placeholder6.jpg" alt="" ></a>
         </ul>
     </div>
 
@@ -98,7 +91,6 @@
     <div class="section" id="about">
     
       <div id="about-image" class="gut-50">
-        <!-- <img src="./imgs/about-banner-pic.jpg" width="100%" height="auto"> -->
       </div>
         
       <div class="container">
