--- a/works/ideas.html
+++ b/works/ideas.html
@@ -24,7 +24,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/app.css">
 
-    <title>Film | Dare To Be</title>
+    <title>Ideas | Dare To Be</title>
   </head>
   <body>
 
@@ -50,9 +50,9 @@
               <ul class="dropdown-menu dropdown-menu-right dropdown-menu-dark" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="./wood.html">Wodoworking</a></li>
                 <li><a class="dropdown-item" href="./leather.html">Leather Crafting</a></li>
-                <li><a class="dropdown-item" href="#">Film Production</a></li>
+                <li><a class="dropdown-item" href="./film.html">Film Production</a></li>
                 <li><a class="dropdown-item" href="https://dodgedesign.io/">Web Development</a></li>
-                <!-- <li><a class="dropdown-item" href="./ideas.html">Ideas</a></li> -->
+                <li><a class="dropdown-item" href="#">Ideas</a></li>
                 <!-- <div class="dropdown-divider"></div> -->
                 <!-- <li><a class="dropdown-item" href="./inspiration.html">Inspiration</a></li> -->
               </ul>
@@ -62,17 +62,16 @@
       </div>
     </nav>
 
-    <!-- Film Reel -->
-    <div class="section off-white flex align-items-center" id="welcome">
-      <div class="row mx-auto">
-        <div class="container my-auto">
-          <div class="col-12">
-            <div id="video-wrapper">
-              <iframe src="https://player.vimeo.com/video/211423343?color=ffffff&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-            </div>
-          </div>
-        </div>
-      </div>
+    <!-- Ideas Gallery -->
+    <div class="gallery-wrapper">
+      <ul class="grid-wrapper">
+        <a href=""><img src="../images/placeholder1.jpg" alt=""></a>
+        <a href=""><img src="../images/placeholder2.jpg" alt=""></a>
+        <a href=""><img src="../images/placeholder3.jpg" alt=""></a>
+        <a href=""><img src="../images/placeholder4.jpg" alt=""></a>
+        <a href=""><img src="../images/placeholder5.jpg" alt=""></a>
+        <a href=""><img src="../images/placeholder6.jpg" alt=""></a>
+      </ul>
     </div>
 
     <!-- About -->
