--- a/works/leather.html
+++ b/works/leather.html
@@ -52,9 +52,9 @@
                 <li><a class="dropdown-item" href="#">Leather Crafting</a></li>
                 <li><a class="dropdown-item" href="./film.html">Film Production</a></li>
                 <li><a class="dropdown-item" href="https://dodgedesign.io/">Web Development</a></li>
-                <li><a class="dropdown-item" href="./ideas.html">Ideas</a></li>
-                <div class="dropdown-divider"></div>
-                <li><a class="dropdown-item" href="./inspiration.html">Inspiration</a></li>
+                <!-- <li><a class="dropdown-item" href="./ideas.html">Ideas</a></li> -->
+                <!-- <div class="dropdown-divider"></div> -->
+                <!-- <li><a class="dropdown-item" href="./inspiration.html">Inspiration</a></li> -->
               </ul>
             </li>
           </ul>
@@ -78,7 +78,6 @@
     <div class="section" id="about">
     
       <div id="about-image" class="gut-50">
-        <img src="/imgs/about-banner-pic.jpg" width="100%" height="auto">
       </div>
         
       <div class="container">
