Remove unused files

--- a/index.html
+++ b/index.html
@@ -78,12 +78,32 @@
     <!-- Portfolio -->
     <div class="gallery-wrapper">
         <ul class="grid-wrapper">
-            <a href="works/wood.html"><img src="images/placeholder1.jpg" alt="" ></a>
-            <a href="works/leather.html"><img src="images/placeholder2.jpg" alt="" ></a>
-            <a href="works/film.html"><img src="images/placeholder3.jpg" alt="" ></a>
+            <div class="link-wrapper">
+              <a href="works/wood.html"><img src="images/placeholder1.jpg" alt="Woodworking" ></a>
+              <div class="overlay">
+                <div class="text">Woodworking</div>
+              </div>
+            </div>
+            <div class="link-wrapper">
+              <a href="works/leather.html"><img src="images/placeholder2.jpg" alt="Leather Crafting" ></a>
+              <div class="overlay">
+                <div class="text">Leather Crafting</div>
+              </div>
+            </div>
+            <div class="link-wrapper">
+              <a href="works/film.html"><img src="images/placeholder3.jpg" alt="Filmmaking" ></a>
+              <div class="overlay">
+                <div class="text">Filmmaking</div>
+              </div>
+            </div>
             <!-- <a href="works/ideas.html"><img src="images/placeholder4.jpg" alt="" ></a> -->
             <!-- <a href="works/inspiration.html"><img src="images/placeholder5.jpg" alt="" ></a> -->
-            <a href="https://dodgedesign.io/" target="_blank" rel='noreferrer'><img src="images/placeholder6.jpg" alt="" ></a>
+            <a href="https://dodgedesign.io/" target="_blank" rel='noreferrer' class="link-wrapper">
+              <img src="images/placeholder6.jpg" alt="Web Development">
+              <div class="overlay">
+                <div class="text">Web Development</div>
+              </div>
+            </a>
         </ul>
     </div>
 
