Fix image links

--- a/index.html
+++ b/index.html
@@ -78,28 +78,28 @@
     <!-- Portfolio -->
     <div class="gallery-wrapper">
         <ul class="grid-wrapper">
-            <div class="link-wrapper">
-              <a href="works/wood.html"><img src="images/placeholder1.jpg" alt="Woodworking" ></a>
+            <a href="works/wood.html" class="link-wrapper">
+              <img src="images/w-377.JPG" alt="Woodworking" >
               <div class="overlay">
                 <div class="text">Woodworking</div>
               </div>
-            </div>
-            <div class="link-wrapper">
-              <a href="works/leather.html"><img src="images/placeholder2.jpg" alt="Leather Crafting" ></a>
+            </a>
+            <a href="works/leather.html" class="link-wrapper">
+              <img src="images/c-146.JPG" alt="Leather Crafting" >
               <div class="overlay">
                 <div class="text">Leather Crafting</div>
               </div>
-            </div>
-            <div class="link-wrapper">
-              <a href="works/film.html"><img src="images/placeholder3.jpg" alt="Filmmaking" ></a>
+            </a>
+            <a href="works/film.html" class="link-wrapper">
+              <img src="images/f-1.png" alt="Filmmaking" >
               <div class="overlay">
                 <div class="text">Filmmaking</div>
               </div>
-            </div>
+            </a>
             <!-- <a href="works/ideas.html"><img src="images/placeholder4.jpg" alt="" ></a> -->
             <!-- <a href="works/inspiration.html"><img src="images/placeholder5.jpg" alt="" ></a> -->
             <a href="https://dodgedesign.io/" target="_blank" rel='noreferrer' class="link-wrapper">
-              <img src="images/placeholder6.jpg" alt="Web Development">
+              <img src="images/dev-1.jpg" alt="Web Development">
               <div class="overlay">
                 <div class="text">Web Development</div>
               </div>
