Add portfolio images

--- a/works/leather.html
+++ b/works/leather.html
@@ -65,12 +65,25 @@
     <!-- Leather Crafting Gallery -->
     <div class="gallery-wrapper">
       <ul class="grid-wrapper">
-          <a href=""><img src="../images/placeholder1.jpg" alt=""></a>
-          <a href=""><img src="../images/placeholder2.jpg" alt=""></a>
-          <a href=""><img src="../images/placeholder3.jpg" alt=""></a>
-          <a href=""><img src="../images/placeholder4.jpg" alt=""></a>
-          <a href=""><img src="../images/placeholder5.jpg" alt=""></a>
-          <a href=""><img src="../images/placeholder6.jpg" alt=""></a>
+        <a href=""><img src="../images/c-101.JPG" alt=""></a>
+        <a href=""><img src="../images/c-113.JPG" alt=""></a>
+        <a href=""><img src="../images/c-115.JPG" alt=""></a>
+        <a href=""><img src="../images/c-124.JPG" alt=""></a>
+        <a href=""><img src="../images/c-142.JPG" alt=""></a>
+        <a href=""><img src="../images/c-146.JPG" alt=""></a>
+        <a href=""><img src="../images/c-156.JPG" alt=""></a>
+        <a href=""><img src="../images/c-160.JPG" alt=""></a>
+        <a href=""><img src="../images/c-171.JPG" alt=""></a>
+        <a href=""><img src="../images/c-208.JPG" alt=""></a>
+        <a href=""><img src="../images/c-215.JPG" alt=""></a>
+        <a href=""><img src="../images/c-220.JPG" alt=""></a>
+        <a href=""><img src="../images/c-393.JPG" alt=""></a>
+        <a href=""><img src="../images/c-399.JPG" alt=""></a>
+        <a href=""><img src="../images/c-403.JPG" alt=""></a>
+        <a href=""><img src="../images/c-88.JPG" alt=""></a>
+        <a href=""><img src="../images/c-93.JPG" alt=""></a>
+        <a href=""><img src="../images/c-98.JPG" alt=""></a>
+        <a href=""><img src="../images/c-99.JPG" alt=""></a>
       </ul>
     </div>
 
