--- a/works/wood.html
+++ b/works/wood.html
@@ -65,12 +65,30 @@
     <!-- Wodoworking Gallery -->
     <div class="gallery-wrapper">
       <ul class="grid-wrapper">
-        <a href=""><img src="../images/placeholder1.jpg" alt=""></a>
-        <a href=""><img src="../images/placeholder2.jpg" alt=""></a>
-        <a href=""><img src="../images/placeholder3.jpg" alt=""></a>
-        <a href=""><img src="../images/placeholder4.jpg" alt=""></a>
-        <a href=""><img src="../images/placeholder5.jpg" alt=""></a>
-        <a href=""><img src="../images/placeholder6.jpg" alt=""></a>
+        <a href=""><img src="../images/w-324.JPG" alt=""></a>
+        <a href=""><img src="../images/w-35.JPG" alt=""></a>
+        <a href=""><img src="../images/w-367.JPG" alt=""></a>
+        <a href=""><img src="../images/w-37.JPG" alt=""></a>
+        <a href=""><img src="../images/w-370.JPG" alt=""></a>
+        <a href=""><img src="../images/w-371.JPG" alt=""></a>
+        <a href=""><img src="../images/w-377.JPG" alt=""></a>
+        <a href=""><img src="../images/w-382.JPG" alt=""></a>
+        <a href=""><img src="../images/w-53.JPG" alt=""></a>
+        <a href=""><img src="../images/w-58.JPG" alt=""></a>
+        <a href=""><img src="../images/w-75.JPG" alt=""></a>
+        <a href=""><img src="../images/w-81.JPG" alt=""></a>
+        <a href=""><img src="../images/w-229.JPG" alt=""></a>
+        <a href=""><img src="../images/w-23.JPG" alt=""></a>
+        <a href=""><img src="../images/w-22.JPG" alt=""></a>
+        <a href=""><img src="../images/w-237.JPG" alt=""></a>
+        <a href=""><img src="../images/w-279.JPG" alt=""></a>
+        <a href=""><img src="../images/w-284.JPG" alt=""></a>
+        <a href=""><img src="../images/w-296.JPG" alt=""></a>
+        <a href=""><img src="../images/w-297.JPG" alt=""></a>
+        <a href=""><img src="../images/w-304.JPG" alt=""></a>
+        <a href=""><img src="../images/w-31.JPG" alt=""></a>
+        <a href=""><img src="../images/w-314.JPG" alt=""></a>
+        <a href=""><img src="../images/w-315.JPG" alt=""></a>
       </ul>
     </div>
 
