Add titles, change film image

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <ul class="dropdown-menu dropdown-menu-right dropdown-menu-dark" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="works/wood.html">Wodoworking</a></li>
                 <li><a class="dropdown-item" href="works/leather.html">Leather Crafting</a></li>
-                <li><a class="dropdown-item" href="works/film.html">Film Production</a></li>
+                <li><a class="dropdown-item" href="works/film.html">Filmmaking</a></li>
                 <li><a class="dropdown-item" href="https://dodgedesign.io/">Web Development</a></li>
                 <!-- <li><a class="dropdown-item" href="works/ideas.html">Ideas</a></li> -->
                 <!-- <div class="dropdown-divider"></div>
@@ -91,7 +91,7 @@
               </div>
             </a>
             <a href="works/film.html" class="link-wrapper">
-              <img src="images/f-1.png" alt="Filmmaking" >
+              <img src="images/f-2.png" alt="Filmmaking" >
               <div class="overlay">
                 <div class="text">Filmmaking</div>
               </div>
