--- a/works/film.html
+++ b/works/film.html
@@ -24,7 +24,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/app.css">
 
-    <title>Film | Dare To Be</title>
+    <title>Filmmaking | Dare To Be</title>
   </head>
   <body>
 
@@ -50,7 +50,7 @@
               <ul class="dropdown-menu dropdown-menu-right dropdown-menu-dark" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="./wood.html">Wodoworking</a></li>
                 <li><a class="dropdown-item" href="./leather.html">Leather Crafting</a></li>
-                <li><a class="dropdown-item" href="#">Film Production</a></li>
+                <li><a class="dropdown-item" href="#">Filmmaking</a></li>
                 <li><a class="dropdown-item" href="https://dodgedesign.io/">Web Development</a></li>
                 <!-- <li><a class="dropdown-item" href="./ideas.html">Ideas</a></li> -->
                 <!-- <div class="dropdown-divider"></div> -->
@@ -68,6 +68,7 @@
         <div class="container my-auto">
           <div class="col-12">
             <div id="video-wrapper">
+              <h6 class="gallery-title">Filmmaking</h6>
               <iframe src="https://player.vimeo.com/video/211423343?color=ffffff&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
