--- a/works/wood.html
+++ b/works/wood.html
@@ -50,7 +50,7 @@
               <ul class="dropdown-menu dropdown-menu-right dropdown-menu-dark" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="#">Wodoworking</a></li>
                 <li><a class="dropdown-item" href="./leather.html">Leather Crafting</a></li>
-                <li><a class="dropdown-item" href="./film.html">Film Production</a></li>
+                <li><a class="dropdown-item" href="./film.html">Filmmaking</a></li>
                 <li><a class="dropdown-item" href="https://dodgedesign.io/">Web Development</a></li>
                 <!-- <li><a class="dropdown-item" href="./ideas.html">Ideas</a></li> -->
                 <!-- <div class="dropdown-divider"></div> -->
@@ -63,7 +63,8 @@
     </nav>
 
     <!-- Wodoworking Gallery -->
-    <div class="gallery-wrapper">
+    <div class="gallery-wrapper tm-8">
+      <h6 class="gallery-title">Woodworking</h6>
       <ul class="grid-wrapper">
         <a href=""><img src="../images/w-324.JPG" alt=""></a>
         <a href=""><img src="../images/w-35.JPG" alt=""></a>
