Arrange wood gallery

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
 
     <!-- Portfolio -->
-    <div class="gallery-wrapper">
+    <div class="gallery-wrapper nav-gallery">
         <ul class="grid-wrapper">
             <a href="works/wood.html" class="link-wrapper">
               <img src="images/w-377.JPG" alt="Woodworking" >
