--- a/works/wood.html
+++ b/works/wood.html
@@ -63,33 +63,31 @@
     </nav>
 
     <!-- Wodoworking Gallery -->
-    <div class="gallery-wrapper tm-8">
+    <div class="gallery-wrapper wood-gallery tm-8">
       <h6 class="gallery-title">Woodworking</h6>
       <ul class="grid-wrapper">
-        <a href=""><img src="../images/w-324.JPG" alt=""></a>
-        <a href=""><img src="../images/w-35.JPG" alt=""></a>
-        <a href=""><img src="../images/w-367.JPG" alt=""></a>
-        <a href=""><img src="../images/w-37.JPG" alt=""></a>
-        <a href=""><img src="../images/w-370.JPG" alt=""></a>
-        <a href=""><img src="../images/w-371.JPG" alt=""></a>
-        <a href=""><img src="../images/w-377.JPG" alt=""></a>
-        <a href=""><img src="../images/w-382.JPG" alt=""></a>
-        <a href=""><img src="../images/w-53.JPG" alt=""></a>
-        <a href=""><img src="../images/w-58.JPG" alt=""></a>
-        <a href=""><img src="../images/w-75.JPG" alt=""></a>
-        <a href=""><img src="../images/w-81.JPG" alt=""></a>
-        <a href=""><img src="../images/w-229.JPG" alt=""></a>
-        <a href=""><img src="../images/w-23.JPG" alt=""></a>
-        <a href=""><img src="../images/w-22.JPG" alt=""></a>
-        <a href=""><img src="../images/w-237.JPG" alt=""></a>
-        <a href=""><img src="../images/w-279.JPG" alt=""></a>
-        <a href=""><img src="../images/w-284.JPG" alt=""></a>
-        <a href=""><img src="../images/w-296.JPG" alt=""></a>
-        <a href=""><img src="../images/w-297.JPG" alt=""></a>
-        <a href=""><img src="../images/w-304.JPG" alt=""></a>
-        <a href=""><img src="../images/w-31.JPG" alt=""></a>
-        <a href=""><img src="../images/w-314.JPG" alt=""></a>
-        <a href=""><img src="../images/w-315.JPG" alt=""></a>
+        <img src="../images/w-377.JPG" alt="">
+        <img src="../images/w-370.JPG" alt="">
+        <img src="../images/w-371.JPG" alt="">
+        <img src="../images/w-382.JPG" alt="">
+        <img src="../images/w-367.JPG" alt="">
+        <img src="../images/w-324.JPG" alt="">
+        <img src="../images/w-81.JPG" alt="">
+        <img src="../images/w-53.JPG" alt="">
+        <img src="../images/w-58.JPG" alt="">
+        <img src="../images/w-35.JPG" alt="">
+        <img src="../images/w-31.JPG" alt="">
+        <img src="../images/w-23.JPG" alt="">
+        <img src="../images/w-22.JPG" alt="">
+        <img src="../images/w-237.JPG" alt="">
+        <img src="../images/w-279.JPG" alt="">
+        <img src="../images/w-284.JPG" alt="">
+        <img src="../images/w-229.JPG" alt="">
+        <img src="../images/w-297.JPG" alt="">
+        <img src="../images/w-304.JPG" alt="">
+        <img src="../images/w-296.JPG" alt="">
+        <img src="../images/w-314.JPG" alt="">
+        <img src="../images/w-315.JPG" alt="">
       </ul>
     </div>
 
