Arrange leather gallery

--- a/works/leather.html
+++ b/works/leather.html
@@ -63,28 +63,28 @@
     </nav>
 
     <!-- Leather Crafting Gallery -->
-    <div class="gallery-wrapper tm-8">
+    <div class="gallery-wrapper leather-gallery tm-8">
       <h6 class="gallery-title">Leather Crafting</h6>
       <ul class="grid-wrapper">
-        <a href=""><img src="../images/c-101.JPG" alt=""></a>
-        <a href=""><img src="../images/c-113.JPG" alt=""></a>
-        <a href=""><img src="../images/c-115.JPG" alt=""></a>
-        <a href=""><img src="../images/c-124.JPG" alt=""></a>
-        <a href=""><img src="../images/c-142.JPG" alt=""></a>
-        <a href=""><img src="../images/c-146.JPG" alt=""></a>
-        <a href=""><img src="../images/c-156.JPG" alt=""></a>
-        <a href=""><img src="../images/c-160.JPG" alt=""></a>
-        <a href=""><img src="../images/c-171.JPG" alt=""></a>
-        <a href=""><img src="../images/c-208.JPG" alt=""></a>
-        <a href=""><img src="../images/c-215.JPG" alt=""></a>
-        <a href=""><img src="../images/c-220.JPG" alt=""></a>
-        <a href=""><img src="../images/c-393.JPG" alt=""></a>
-        <a href=""><img src="../images/c-399.JPG" alt=""></a>
-        <a href=""><img src="../images/c-403.JPG" alt=""></a>
-        <a href=""><img src="../images/c-88.JPG" alt=""></a>
-        <a href=""><img src="../images/c-93.JPG" alt=""></a>
-        <a href=""><img src="../images/c-98.JPG" alt=""></a>
-        <a href=""><img src="../images/c-99.JPG" alt=""></a>
+        <img src="../images/c-160.JPG" alt="">
+        <img src="../images/c-142.JPG" alt="">
+        <img src="../images/c-146.JPG" alt="">
+        <img src="../images/c-156.JPG" alt="">
+        <img src="../images/c-171.JPG" alt="">
+        <img src="../images/c-208.JPG" alt="">
+        <img src="../images/c-215.JPG" alt="">
+        <img src="../images/c-220.JPG" alt="">
+        <img src="../images/c-88.JPG" alt="">
+        <img src="../images/c-93.JPG" alt="">
+        <img src="../images/c-98.JPG" alt="">
+        <img src="../images/c-99.JPG" alt="">
+        <!-- <img src="../images/c-101.JPG" alt=""> -->
+        <img src="../images/c-113.JPG" alt="">
+        <img src="../images/c-115.JPG" alt="">
+        <img src="../images/c-124.JPG" alt="">
+        <img src="../images/c-393.JPG" alt="">
+        <img src="../images/c-399.JPG" alt="">
+        <img src="../images/c-403.JPG" alt="">
       </ul>
     </div>
 
