Update About copy

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <li><a class="dropdown-item" href="works/wood.html">Wodoworking</a></li>
                 <li><a class="dropdown-item" href="works/leather.html">Leather Crafting</a></li>
                 <li><a class="dropdown-item" href="works/film.html">Filmmaking</a></li>
-                <li><a class="dropdown-item" href="https://dodgedesign.io/">Web Development</a></li>
+                <li><a class="dropdown-item" href="https://dodgedesign.io/" target="_blank" rel='noreferrer'>Web Development</a></li>
                 <!-- <li><a class="dropdown-item" href="works/ideas.html">Ideas</a></li> -->
                 <!-- <div class="dropdown-divider"></div>
                 <li><a class="dropdown-item" href="works/inspiration.html">Inspiration</a></li> -->
@@ -84,16 +84,16 @@
                 <div class="text">Woodworking</div>
               </div>
             </a>
-            <a href="works/leather.html" class="link-wrapper">
-              <img src="images/c-146.JPG" alt="Leather Crafting" >
-              <div class="overlay">
-                <div class="text">Leather Crafting</div>
-              </div>
-            </a>
             <a href="works/film.html" class="link-wrapper">
               <img src="images/f-2.png" alt="Filmmaking" >
               <div class="overlay">
                 <div class="text">Filmmaking</div>
+              </div>
+            </a>
+            <a href="works/leather.html" class="link-wrapper">
+              <img src="images/c-160.JPG" alt="Leather Crafting" >
+              <div class="overlay">
+                <div class="text">Leather Crafting</div>
               </div>
             </a>
             <!-- <a href="works/ideas.html"><img src="images/placeholder4.jpg" alt="" ></a> -->
