--- a/works/film.html
+++ b/works/film.html
@@ -51,7 +51,7 @@
                 <li><a class="dropdown-item" href="./wood.html">Wodoworking</a></li>
                 <li><a class="dropdown-item" href="./leather.html">Leather Crafting</a></li>
                 <li><a class="dropdown-item" href="#">Filmmaking</a></li>
-                <li><a class="dropdown-item" href="https://dodgedesign.io/">Web Development</a></li>
+                <li><a class="dropdown-item" href="https://dodgedesign.io/" target="_blank" rel='noreferrer'>Web Development</a></li>
                 <!-- <li><a class="dropdown-item" href="./ideas.html">Ideas</a></li> -->
                 <!-- <div class="dropdown-divider"></div> -->
                 <!-- <li><a class="dropdown-item" href="./inspiration.html">Inspiration</a></li> -->
@@ -70,42 +70,15 @@
             <div id="video-wrapper">
               <h6 class="gallery-title">Filmmaking</h6>
               <iframe src="https://player.vimeo.com/video/211423343?color=ffffff&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+              <h6>About</h6>
+              <p>This montage is a collection of my filmmkaing between 2014-2018</p>
+              <div id="footer">
+                <p>&#169; Christopher Dodge 2021 | NC</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-
-    <!-- About -->
-    <div class="section" id="about">
-    
-      <div id="about-image" class="gut-50">
-      </div>
-        
-      <div class="container">
-        <div class="row justify-content-center" data-aos="fade-up" data-aos-duration="1500">
-          <div class="col-0 col-md-3"></div>
-          <div class="col-12 col-md-6">
-              <h6>About</h6>
-                <!-- <hr> -->
-                <p>The 3 things at the center of my heart are my family, creating, and rock 'n' roll.</p>
-                <p>Driven by curiosity and a love of learning, I seek to leave the world better than I found it. That means empowering individuals, cultivating meaningful relationships and embracing life’s challenges as opportunities.</p>
-                <div id="links">
-                  <a href="https://github.com/christopher-dodge" target="_blank"><i class="fab fa-github-alt"></i></a>
-                  <a href="https://www.linkedin.com/in/christopher-dodge-1813491ab/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                </div>
-          </div>
-          <div class="col-0 col-md-3"></div>
-        </div>
-      </div>
-
-      <div id="footer">
-        <p>
-          &#169; Christopher Dodge 2021 | NC
-        </p>
-      </div>
-
-    </div>
 
     <!-- Font Scripts -->
     <script src="https://kit.fontawesome.com/70e0f422f3.js" crossorigin="anonymous"></script>
