--- a/works/leather.html
+++ b/works/leather.html
@@ -51,7 +51,7 @@
                 <li><a class="dropdown-item" href="./wood.html">Wodoworking</a></li>
                 <li><a class="dropdown-item" href="#">Leather Crafting</a></li>
                 <li><a class="dropdown-item" href="./film.html">Filmmaking</a></li>
-                <li><a class="dropdown-item" href="https://dodgedesign.io/">Web Development</a></li>
+                <li><a class="dropdown-item" href="https://dodgedesign.io/" target="_blank" rel='noreferrer'>Web Development</a></li>
                 <!-- <li><a class="dropdown-item" href="./ideas.html">Ideas</a></li> -->
                 <!-- <div class="dropdown-divider"></div> -->
                 <!-- <li><a class="dropdown-item" href="./inspiration.html">Inspiration</a></li> -->
@@ -99,13 +99,7 @@
           <div class="col-0 col-md-3"></div>
           <div class="col-12 col-md-6">
               <h6>About</h6>
-                <!-- <hr> -->
-                <p>The 3 things at the center of my heart are my family, creating, and rock 'n' roll.</p>
-                <p>Driven by curiosity and a love of learning, I seek to leave the world better than I found it. That means empowering individuals, cultivating meaningful relationships and embracing life’s challenges as opportunities.</p>
-                <div id="links">
-                  <a href="https://github.com/christopher-dodge" target="_blank"><i class="fab fa-github-alt"></i></a>
-                  <a href="https://www.linkedin.com/in/christopher-dodge-1813491ab/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                </div>
+                <p>Leather crafting has tapped into an artistic desire to create wearbles by combining primal elements with aesthetic design. 2020-present.</p>
           </div>
           <div class="col-0 col-md-3"></div>
         </div>
