--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 Works
               </a>
               <ul class="dropdown-menu dropdown-menu-right dropdown-menu-dark" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="works/wood.html">Wodoworking</a></li>
+                <li><a class="dropdown-item" href="works/wood.html">Woodworking</a></li>
                 <li><a class="dropdown-item" href="works/leather.html">Leather Crafting</a></li>
                 <li><a class="dropdown-item" href="works/film.html">Filmmaking</a></li>
                 <li><a class="dropdown-item" href="https://dodgedesign.io/" target="_blank" rel='noreferrer'>Web Development</a></li>
@@ -121,10 +121,10 @@
                 <!-- <hr> -->
                 <p>The 3 things at the center of my heart are my family, creating, and rock 'n' roll.</p>
                 <p>Driven by curiosity and a love of learning, I seek to leave the world better than I found it. That means empowering individuals, cultivating meaningful relationships and embracing life’s challenges as opportunities.</p>
-                <div id="links">
+                <!-- <div id="links">
                   <a href="https://github.com/christopher-dodge" target="_blank"><i class="fab fa-github-alt"></i></a>
                   <a href="https://www.linkedin.com/in/christopher-dodge-1813491ab/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                </div>
+                </div> -->
           </div>
           <div class="col-0 col-md-3"></div>
         </div>
