--- a/works/wood.html
+++ b/works/wood.html
@@ -48,7 +48,7 @@
                 Works
               </a>
               <ul class="dropdown-menu dropdown-menu-right dropdown-menu-dark" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Wodoworking</a></li>
+                <li><a class="dropdown-item" href="#">Woodworking</a></li>
                 <li><a class="dropdown-item" href="./leather.html">Leather Crafting</a></li>
                 <li><a class="dropdown-item" href="./film.html">Filmmaking</a></li>
                 <li><a class="dropdown-item" href="https://dodgedesign.io/" target="_blank" rel='noreferrer'>Web Development</a></li>
