Add deployment link to README

--- a/index.html
+++ b/index.html
@@ -63,17 +63,20 @@
     </nav>
 
     <!-- Welcome (Top) -->
-    <div class="section off-white flex align-items-center" id="welcome">
-      <div class="row mx-auto">
-        <div class="container my-auto">
-          <div class="col-12">
-            <div data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200">
-              <img src="images/flower-of-life.png" class="mx-auto d-block" alt="flower of life">
+    <!-- <div id="top"> -->
+      <div class="section off-white flex align-items-center" id="welcome">
+        <div class="row mx-auto">
+          <div class="container my-auto">
+            <div class="col-12">
+              <div data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200">
+                <img src="images/flower-of-life.png" class="mx-auto d-block" alt="flower of life">
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+      <!-- <p id="arrow-down"><i class="arrow down"></i></p> -->
+    <!-- </div> -->
 
     <!-- Portfolio -->
     <div class="gallery-wrapper nav-gallery">
