Fix typo, close #2

--- a/works/film.html
+++ b/works/film.html
@@ -71,7 +71,7 @@
               <h6 class="gallery-title">Filmmaking</h6>
               <iframe src="https://player.vimeo.com/video/211423343?color=ffffff&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
               <h6>About</h6>
-              <p>This montage is a collection of my filmmkaing between 2014-2018</p>
+              <p>This montage is a collection of my filmmaking between 2014-2018</p>
               <div id="footer">
                 <p>&#169; Christopher Dodge 2021 | NC</p>
               </div>
