--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" prefix="og: https://ogp.me/ns#">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <meta property="og:title" content="Dare To Be | xyz" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://daretobe.xyz/" />
+    <meta property="og:image" content="images/flower-of-life.png" />
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="imgs/fav-green.svg">
