Add meta description

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://daretobe.xyz/" />
     <meta property="og:image" content="images/flower-of-life.png" />
+    <meta property="og:description" content="My full stack web developer portfolio">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="imgs/fav-green.svg">
