Add meta name attributes

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta property="og:title" content="Dare To Be | xyz" />
+    <meta name="title" property="og:title" content="Dare To Be | xyz" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://daretobe.xyz/" />
-    <meta property="og:image" content="images/flower-of-life.png" />
-    <meta property="og:description" content="My full stack web developer portfolio">
+    <meta name="image" property="og:image" content="images/flower-of-life.png" />
+    <meta name="description" property="og:description" content="My full stack web developer portfolio">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="imgs/fav-green.svg">
