Add pics, fix meta description

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="title" property="og:title" content="Dare To Be | xyz" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://daretobe.xyz/" />
-    <meta name="image" property="og:image" content="images/flower-of-life.png" />
-    <meta name="description" property="og:description" content="My creative portfolio, which includes my latest projects in woodworking, leather crafting, full stack web development and filmmaking">
+    <meta name="image" property="og:image" content="images/flower-of-life-black-alt.png" />
+    <meta name="description" property="og:description" content="My creative portfolio, which includes my latest projects in woodworking, leather crafting, full stack web development and filmmaking" />
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="imgs/fav-green.svg">
