Update meta title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta name="title" property="og:title" content="Dare To Be | xyz" />
+    <meta name="title" property="og:title" content="Dare To Be | xyz - The creative portfolio of Christopher Dodge" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://daretobe.xyz/" />
     <meta name="image" property="og:image" content="images/flower-of-life-black-alt.png" />
