--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <meta name="title" property="og:title" content="Dare To Be | xyz - The creative portfolio of Christopher Dodge" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://daretobe.xyz/" />
-    <meta name="image" property="og:image" content="images/flower-of-life-black-alt.png" />
     <meta name="description" property="og:description" content="My creative portfolio, which includes my latest projects in woodworking, leather crafting, full stack web development and filmmaking" />
+    <meta name="image" property="og:image" content="images/flower-of-life-black-alt.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="600" />
+    <meta property="og:image:height" content="600" />
+    <meta property="og:image:alt" content="A pink Flower of Life symbol" />
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="imgs/fav-green.svg">
