Migrate web dev portfolio

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <li><a class="dropdown-item" href="works/wood.html">Woodworking</a></li>
                 <li><a class="dropdown-item" href="works/leather.html">Leather Crafting</a></li>
                 <li><a class="dropdown-item" href="works/film.html">Filmmaking</a></li>
-                <li><a class="dropdown-item" href="https://dodgedesign.io/" target="_blank" rel='noreferrer'>Web Development</a></li>
+                <li><a class="dropdown-item" href="works/dev/index.html" target="_blank" rel='noreferrer'>Web Development</a></li>
                 <!-- <li><a class="dropdown-item" href="works/ideas.html">Ideas</a></li> -->
                 <!-- <div class="dropdown-divider"></div>
                 <li><a class="dropdown-item" href="works/inspiration.html">Inspiration</a></li> -->
@@ -111,7 +111,7 @@
             </a>
             <!-- <a href="works/ideas.html"><img src="images/placeholder4.jpg" alt="" ></a> -->
             <!-- <a href="works/inspiration.html"><img src="images/placeholder5.jpg" alt="" ></a> -->
-            <a href="https://dodgedesign.io/" target="_blank" rel='noreferrer' class="link-wrapper">
+            <a href="works/dev/index.html" target="_blank" rel='noreferrer' class="link-wrapper">
               <img src="images/dev-1.jpg" alt="Web Development">
               <div class="overlay">
                 <div class="text">Web Development</div>
