Update footer text

--- a/works/dev/index.html
+++ b/works/dev/index.html
@@ -35,7 +35,7 @@
 
     <!-- Nav Bar -->
     <nav id="mainNavbar" class="navbar navbar-light py-0 fixed-top">
-      <a href="#" class="navbar-brand">Christopher Dodge</a>
+      <a href="../../index.html" class="navbar-brand">Dare To Be | xyz</a>
       
       <!-- <div class="ml-auto mr-4 d-flex align-items-center">
         <a class="btn" href="#contact"><i class="fas fa-envelope"></i> Get In Touch</a>
@@ -334,7 +334,7 @@
       <div class="row d-flex justify-content-center">
         <div class="col-12"></div>
           <p>
-            Created by Christopher Dodge from scratch (& a little Bootstrap)
+            Designed and Developed by Christopher Dodge
           </p>
         </div>
       </div>
