--- a/works/film.html
+++ b/works/film.html
@@ -22,7 +22,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;700&display=swap" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/app.css">
+    <link rel="stylesheet" href="../app.css">
 
     <title>Filmmaking | Dare To Be</title>
   </head>
@@ -38,7 +38,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="/index.html">Home</a>
+              <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
