Add project, remove project

--- a/works/dev/index.html
+++ b/works/dev/index.html
@@ -4,9 +4,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="title" property="og:title" content="DodgeDesign.io - The full stack web development portfolio of Christopher Dodge" />
+    <meta name="title" property="og:title" content="DareToBe.xyz - The full stack web development portfolio of Christopher Dodge" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://dodgedesign.io/" />
+    <meta property="og:url" content="https://daretobe.xyz/" />
     <meta name="description" property="og:description" content="My full stack web development portfolio, which includes my latest projects, bio and technologies" />
     <meta name="image" property="og:image" content="./imgs/computer-screen-code-pic.jpg" />
     <meta property="og:image:type" content="image/jpg" />
@@ -111,15 +111,15 @@
       <div class="row" data-aos="fade-up" data-aos-duration="1500">
         <div class="col mb-3">
           <div class="card mx-auto">
-            <img class="card-img-top" src="https://images.unsplash.com/photo-1569073120512-05362a6b92e7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80" alt="Card image cap">
+            <img class="card-img-top" src="./imgs/spider-crow-pic.jpg" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Storie</h5>
-              <p class="card-text">A private family stories app</p>
-              <p class="card-text">Tech: Node.js, Express, MongoDB, React, Material UI</p>
+              <h5 class="card-title">Spider Crow Designs</h5>
+              <p class="card-text">A single-page scroll artist portfolio site</p>
+              <p class="card-text">Tech: MongoDB, Express, React, Node.js</p>
             </div>
             <div class="card-body">
-              <!-- <a href="#" class="card-link" target="_blank">Launch</a> -->
-              <a href="https://github.com/christopher-dodge/storie" class="card-link" target="_blank">View Code</a>
+              <a href="https://spidercrowdesigns.com/" class="card-link" target="_blank">Launch</a>
+              <a href="https://github.com/christopher-dodge/spidercrowdesigns" class="card-link" target="_blank">View Code</a>
             </div>
           </div>
         </div>
