--- a/index.html
+++ b/index.html
@@ -57,15 +57,23 @@
               <a class="nav-link dropdown-toggle" href="" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Works
               </a>
-              <ul class="dropdown-menu dropdown-menu-right dropdown-menu-dark" aria-labelledby="navbarDropdown">
+              <!-- <ul class="dropdown-menu dropdown-menu-right dropdown-menu-dark" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="works/wood.html">Woodworking</a></li>
                 <li><a class="dropdown-item" href="works/leather.html">Leather Crafting</a></li>
                 <li><a class="dropdown-item" href="works/film.html">Filmmaking</a></li>
                 <li><a class="dropdown-item" href="works/dev/index.html" target="_blank" rel='noreferrer'>Web Development</a></li>
-                <!-- <li><a class="dropdown-item" href="works/ideas.html">Ideas</a></li> -->
-                <!-- <div class="dropdown-divider"></div>
-                <li><a class="dropdown-item" href="works/inspiration.html">Inspiration</a></li> -->
-              </ul>
+              </ul> -->
+              <div class="btn-group">
+                <button class="btn btn-secondary btn-sm" type="button">
+                  Small split button
+                </button>
+                <button type="button" class="btn btn-sm btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                  <span class="visually-hidden">Toggle Dropdown</span>
+                </button>
+                <ul class="dropdown-menu">
+                  ...
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
