Update summary text

--- a/works/dev/index.html
+++ b/works/dev/index.html
@@ -85,7 +85,11 @@
             <div data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200">
             <h2 id="hello">Hello and Welcome!</h2>
             </div>
-            <p>I'm a Full Stack Web Developer that is passionate about creating dynamic, intuitive web applications.</p>
+            <!-- <div class="col"></div> -->
+            <div id="summary_text" class="">
+              <p>My name is Christopher Dodge. I'm a full-stack web developer and lifelong learner with a passion for making the world a better place. Focused on JavaScript and MERN stack development with a willingness to learn new technologies.</p>
+            </div>
+            <!-- <div class="col"></div> -->
           </div>
         </div>
       </div>
