Update quick-links location, fix responsiveness error

--- a/works/dev/index.html
+++ b/works/dev/index.html
@@ -95,7 +95,7 @@
       </div>
 
         <div class="row h-50">
-          <div class="col-sm-12 my-auto">
+          <div class="col-sm-12">
             <div class="mx-auto"><a class="btn quick-link" href="#contact"><i class="fas fa-envelope"></i> Get In Touch</a></div>
             <div class="mx-auto"><a class="btn quick-link" href="#portfolio">Portfolio</a></div>
             <div class="mx-auto"><a class="btn quick-link" href="#about">About</a></div>
