Fix social links spacing

--- a/works/dev/index.html
+++ b/works/dev/index.html
@@ -262,11 +262,11 @@
     
     <!-- Links -->
     <div id="links-section">
-      <div class="row d-flex justify-content-center">
-        <div class="col-1">
+      <div id="social_links_div" class="row mx-auto">
+        <div class="col d-flex justify-content-center">
           <a href="https://github.com/christopher-dodge" target="_blank"><i class="fab fa-github-alt"></i></a>
         </div>
-        <div class="col-1">
+        <div class="col d-flex justify-content-center">
           <a href="https://www.linkedin.com/in/christopher-dodge-1813491ab/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
       </div>
