--- a/works/dev/index.html
+++ b/works/dev/index.html
@@ -273,7 +273,7 @@
       <div class="row d-flex justify-content-center">
         <div class="col-12"></div>
           <p>
-            Designed and Developed by Christopher Dodge
+            Thank you for visiting!
           </p>
         </div>
       </div>
