--- a/works/dev/index.html
+++ b/works/dev/index.html
@@ -36,10 +36,6 @@
     <!-- Nav Bar -->
     <nav id="mainNavbar" class="navbar navbar-light py-0 fixed-top">
       <a href="../../index.html" class="navbar-brand">Dare To Be | xyz</a>
-      
-      <!-- <div class="ml-auto mr-4 d-flex align-items-center">
-        <a class="btn" href="#contact"><i class="fas fa-envelope"></i> Get In Touch</a>
-      </div> -->
 
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -61,11 +57,11 @@
           </li>
 
           <li class="nav-item">
-            <a href="#skills" class="nav-link">Skills</a>
+            <a href="#contact" class="nav-link">Contact</a>
           </li>
 
           <li class="nav-item">
-            <a href="#contact" class="nav-link">Contact</a>
+            <a href="#links-section" class="nav-link">Social</a>
           </li>
 
         </ul>
@@ -99,7 +95,7 @@
             <div class="mx-auto"><a class="btn quick-link" href="#contact"><i class="fas fa-envelope"></i> Get In Touch</a></div>
             <div class="mx-auto"><a class="btn quick-link" href="#portfolio">Portfolio</a></div>
             <div class="mx-auto"><a class="btn quick-link" href="#about">About</a></div>
-            <div class="mx-auto"><a class="btn quick-link" href="#skills">Skills</a></div>
+            <div class="mx-auto"><a class="btn quick-link" href="#links-section">Social</a></div>
             <div class="mx-auto"><a class=" quick-link" href="#portfolio"><i class="arrow down"></i></a></div>
           </div>
         
