Add up arrow to footer

--- a/works/dev/index.html
+++ b/works/dev/index.html
@@ -98,8 +98,7 @@
             <div class="mx-auto"><a class="btn quick-link" href="#links-section">Social</a></div>
             <div class="mx-auto"><a class=" quick-link" href="#portfolio"><i class="arrow down"></i></a></div>
           </div>
-        
-      </div>
+        </div>
     </div>
 
     <!-- Portfolio -->
@@ -258,6 +257,11 @@
     
     <!-- Links -->
     <div id="links-section">
+      <div class="row">
+        <div class="col-sm-12 d-flex justify-content-center">
+          <a id="arrow_to_top" class=" quick-link" href="#welcome"><i class="arrow up"></i></a>
+        </div>
+      </div>
       <div id="social_links_div" class="row mx-auto">
         <div class="col d-flex justify-content-center">
           <a href="https://github.com/christopher-dodge" target="_blank"><i class="fab fa-github-alt"></i></a>
